@@ -1,3 +1,9 @@
+2008-07-08  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ip4.c
+		- (method_changed): disable manual configuration elements when AutoIP
+			is selected too
+
 2008-07-07  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/page-ip4.c
